--- a/package.json
+++ b/package.json
@@ -22,33 +22,51 @@
       "!**/node_modules/**",
       "!**/babel.config.js",
       "!**/jest.setup.js"
+    ],
+    "moduleNameMapper": {
+      "^@/(.*)$": "<rootDir>/src/$1"
+    }
+  },
+  "rnpm": {
+    "assets": [
+      "assets/icomoon"
     ]
   },
   "dependencies": {
+    "@expo-google-fonts/pt-sans": "^0.2.3",
+    "@expo-google-fonts/pt-sans-caption": "^0.2.3",
     "@react-native-community/masked-view": "^0.1.11",
     "@react-navigation/native": "^6.1.7",
     "@react-navigation/stack": "^6.3.17",
-    "expo": "~49.0.5",
+    "expo": "^49.0.6",
+    "expo-font": "^11.4.0",
+    "expo-splash-screen": "~0.20.5",
     "expo-status-bar": "~1.6.0",
     "jest-expo": "^49.0.0",
     "react": "18.2.0",
     "react-native": "0.72.3",
     "react-native-gesture-handler": "~2.12.0",
+    "react-native-get-random-values": "^1.9.0",
     "react-native-reanimated": "~3.3.0",
     "react-native-safe-area-context": "4.6.3",
-    "react-native-screens": "~3.22.0"
+    "react-native-screens": "~3.22.0",
+    "react-native-vector-icons": "^10.0.0",
+    "uuid": "^9.0.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
+    "@testing-library/jest-native": "^5.4.2",
+    "@testing-library/react-native": "^12.1.3",
     "@types/expo": "^33.0.1",
     "@types/jest": "^29.5.3",
-    "@types/react": "~18.0.14",
+    "@types/react": "~18.2.14",
     "@types/react-native": "^0.72.2",
     "@types/react-test-renderer": "^18.0.0",
-    "jest": "^29.6.2",
+    "@types/uuid": "^9.0.2",
+    "jest": "^29.2.1",
     "react-test-renderer": "^18.2.0",
     "ts-jest": "^29.1.1",
-    "typescript": "^5.1.6"
+    "typescript": "^5.1.3"
   },
   "private": true
 }
